tests/paczka1/fuzzy1/23255223.err
Error in line 7: UULq4jV5 S7 28,3
Error in line 10: 5fDtc9ri S172 n3,1
Error in line 1: 5fDtc9ri S172 33,9
Error in line 15: 5fDtc9ri S7 50,1
Error in line 32: HVoyLwOHAi S7 25,0
